@@ -6,6 +6,7 @@ CONFIG_RULES
 AC_SET_BUILDTOP
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
+AC_FUNC_CHECK(utimes,AC_DEFINE(HAS_UTIMES))
 KRB_INCLUDE
 WITH_KRB5ROOT
 WITH_KRB4
